# ai-news-aggregator

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
app/: check_db.py  daily_runner.py  main.py  runner.py
app/agent/: curator_agent.py  digest_agent.py  email_agent.py
app/api/v1/endpoints/: users.py  (+3 more)
app/core/: email.py  security.py
app/database/: connection.py  models.py  repository.py  seed_users.py
app/profiles/: user_profile.py
app/schemas/: digest.py  feedback.py  signal.py  user.py
app/services/: email.py  process_curator.py  process_digest.py  process_email.py  process_youtube.py  scrape_articles.py
backend/: config.py  pyproject.toml  pytest.ini  requirements.txt
backend/cmd/: api.py  async_daily_worker.py  check_db.py  daily_worker.py  seed.py  worker.py
backend/features/: README.md
backend/features/digests/: __init__.py  feedback_schema.py  model.py  orchestration_router.py  process_curator.py  process_digest.py  process_email.py  repository.py  router.py  schema.py  tasks.py
backend/features/digests/agents/: curator_agent.py  digest_agent.py  email_agent.py
backend/features/signals/: __init__.py  model.py  process_anthropic.py  process_youtube.py  repository.py  router.py  schema.py  scrape_articles.py  tasks.py
backend/features/signals/scrapers/: anthropic.py  openai.py  youtube.py
backend/features/users/: __init__.py  model.py  repository.py  router.py  schema.py
backend/infra/: README.md  __init__.py  gatekeeper.py  security.py
backend/infra/cache/: redis.py
backend/infra/database/: __init__.py  connection.py  models.py
backend/infra/email/: email.py
backend/infra/tasks/: celery_app.py
backend/migrations/: env.py
backend/migrations/versions/: 1aad81eae4ec_initial_schema.py
backend/tests/api/: test_api_endpoints.py
backend/tests/integration/: test_feature_user_repository.py
backend/tests/unit/: test_feature_curator_agent.py  test_infra_gatekeeper.py  test_infra_security.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/: BACKEND.md  FRONTEND.md
docs/adr/: ADR-001-env-standardization.md
docs/rfcs/: RFC-001-agentic-curation.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/.storybook/: preview.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/feed/: page.tsx
frontend/components/: Navbar.tsx  OnboardingForm.tsx
frontend/components/ui/: Input.tsx  Loader.tsx  Select.tsx  Textarea.tsx
frontend/e2e/: landing.spec.ts
frontend/lib/: api-client.ts  api.ts
frontend/lib/services/: digests.ts  signals.ts  user.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/stories/ui/: Button.stories.tsx  Input.stories.tsx  Loader.stories.tsx  Select.stories.tsx  Textarea.stories.tsx
infra/postman/: postman_collection.json
scripts/: run_tests.sh
(+31 files in other folders)
