[project]
name = "ai-news-aggregator-backend"
version = "0.1.0"
description = "AI News Aggregator Backend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "docling>=2.69.1",
    "feedparser>=6.0.12",
    "markdown>=3.9",
    "openai>=2.33.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "email-validator>=2.1.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.49",
    "youtube-transcript-api>=1.2.4",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt,argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "fastapi-mail>=1.4.1",
    "alembic>=1.16.5",
    "redis>=7.0.1",
    "gunicorn>=23.0.0",
    "celery>=5.6.3",
    "flower>=2.0.1",
    "sentry-sdk[fastapi]>=2.59.0",
    "slowapi>=0.1.9",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "tests"]

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true
